template.distillery/static!css!eba.css
/* Default CSS for eba and OW */

/******************************************************************************/
/*********************Default style for some basic elements********************/
/******************************************************************************/

hr {
    color: transparent;
}


a {
    text-decoration: none;
}
a:hover {
    cursor: pointer;
}

html {
    box-sizing: border-box;
    font-familiy: sans-serif;
}

body {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
    line-height: 1.42857143;
    color: #333;
    background-color: #fff;
    margin: 0;
}

nav {
    display: block;
}

form input{
    font-size: 100%;
}

/* footer */
.footer {
    text-align: center;
    margin-bottom: 0;
}

.footer a {
    font-size: 110% !important;
    color: #8fbc8f !important;
}


/* Buttons */
.btn {
    border: solid 1px;
    border-radius: 10px;
    border-width: 2px;
    background-color: transparent;
    font-size: 120%;
    padding: 5px 5px;
}

.btn:hover {
    cursor: pointer;
}
.button:hover {
    cursor: pointer;
}

/* Connected userbox and user settings */
.connected_user_box {
    width: auto;
    display: flex;
}
.connected_user_box i {
    height: auto;
    width: auto;
}

.eba_username {
    margin-left: 20px;
    margin-right: 20px;
    color: white;
    font-size: 120%;
}

.eba_usermenu {
    position: relative;
    width: 90px;
    padding: 5px 5px;
    text-align: center;
}

.usermenu_pop {
    position: absolute;
    top: 80px;
    right: 15px;
    border: 2px solid white !important;
    font-size: 100%;
    padding: 5px 5px !important;
    border-radius: 10px;
    border-width: 2px !important;
    text-align: initial;
    width: auto;
}

.usermenu_pop .button {
    border: solid 1px;
    border-radius: 10px;
    border-width: 2px;
    color: white;
    background-color: transparent;
    font-size: 100%;
}

/* Body */
.eba_body {
    text-align: center;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    min-height: 920px;
}

/*Login Menu*/
.eba_login_menu .button {
    border: solid 1px;
    border-radius: 10px;
    border-width: 2px;
    color: white;
    background-color: transparent;
    font-size: 120%;
    margin-left: 10px;
}
.eba_login_menu input {
    border-radius: 5px;
    margin: 5px;
    font-size: 150%;
    padding: 5px;
}
.eba_login_menu form {
    display: table-caption;
    text-align: center;
}

/* Welcome box */
.eba_welcome_box {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    display: inline-block;
}
.eba_welcome_box .button {
    color: black;
}

/* Display classes */
.navbar a {
    color: white;
}

.navbar-nav {
    list-style-type: none;
    display: flex !important;
}
.navbar-nav li {
    font-size: 150%;
    margin: auto;
    padding: 10px 10px;
}

.navbar-brand {
    font-size: 200%;
    margin-left: 30px;
}

.navbar-inverse {
    background-color: #222;
    border-color: #080808;
    color: #fff;
}

.navbar {
    border-radius: 4px;
    position: relative;
    min-height: 50px;
    margin-bottom: 20px;
    border: 1px solid transparent;
}

.navbar-right {
    float: right !important;
    margin-right: 5px;
    margin-top: 10px;
}

.navbar-header {
    margin-right: 0;
    margin-left: 0;
    float: left;
    width: 100%;
}

.container-fluid {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

/* Width relative display */
.collapse {
    display: initial;
}
@media only screen and (max-width: 1300px){
    .collapse {
	display: none;
    }
}

.collapsed {
    display: none;
}
@media only screen and (max-width: 1300px){
    .collapsed {
	display: initial;
    }
}

/* Smartphone */
@media only screen and (min-device-width : 320px) and (max-device-width: 480px) {
    body {
	font-size: 20px;
    }
}


/**/
.fa-large {
    color: #ddd;
    font-size: 38px;
    vertical-align: middle;
    padding: 6px;
}

/******************************************************************************/
/**********************************Login box***********************************/
/******************************************************************************/

div#eba_login_signup_box {
    height: auto;
    width: 560px;
    right: 100px;
}
div#eba_login_signup_box form {
  text-align: left;
  height: auto;
}

div#eba_login_signup_box input {
  display: inline-block;
  margin: 0 10px 10px 0;
  width: 120px;
}

div#eba_login_signup_box input[type="checkbox"] {
  width: 10px;
}

div#eba_login_signup_box span {
    margin-right: 10px
}

div#eba_login_signup_box label {
    margin: 0 10px 0 0;
}

div#eba_login_signup_box h2 {
  display: inline;
  margin: 0 10px 0 0;
  cursor: pointer;
}
div#eba_login_signup_box h2.pressed {
  color: red;
}

